[gd_scene load_steps=12 format=2]

[ext_resource path="res://Monster/eye/sprites/eye.png" type="Texture" id=1]
[ext_resource path="res://Monster/eye/scripts/eye.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Barra_Vida.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Monster/Area2D.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 426.029

[sub_resource type="CircleShape2D" id=2]
radius = 9.10158

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Area_Ataque/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Area_Ataque/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "take_damage"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Area_Ataque/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Area_Ataque/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 54.131

[node name="eye" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="area_seguidora" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_seguidora"]
shape = SubResource( 1 )

[node name="Barra_Vida" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -14 )
scale = Vector2( 0.035, 0.035 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -7 )
texture = ExtResource( 1 )
hframes = 22

[node name="Area_Ataque" type="Area2D" parent="Sprite" groups=[
"hostil",
]]
position = Vector2( -1, 7 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area_Ataque"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 3 )
anims/move = SubResource( 4 )
anims/take_damage = SubResource( 5 )
anims/transform = SubResource( 6 )

[node name="area_activacion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_activacion"]
shape = SubResource( 7 )
[connection signal="area_entered" from="area_seguidora" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="area_seguidora" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Sprite/Area_Ataque" to="." method="_on_Area_dano_area_entered"]
[connection signal="area_entered" from="area_activacion" to="." method="_on_area_activacion_area_entered"]
